# Machine-Learning-Tampered-Detection

./: README.md  baseline_analysis.py  detect_anomalies.py  eda_openaq.py  eda_openaq_legacy.py  evaluate_framework.py  explain_anomalies.py  fetch_country_pm25.py  pyproject.toml  requirements.txt  run_attacks.py  simulate_attacks.py
attacks/: README.md  analytics.py  campaign.py  config.py  export.py  labels.py  loader.py  logger.py  manager.py  manifest.py  pipeline.py  utils.py  validation.py
attacks/attacks/: __init__.py  constant_bias.py  gradual_drift.py  random_stealth.py  spike_suppression.py
attacks/tests/: test_gradual_drift.py
detection/: README.md  comparison.py  config.py  evaluation.py  experiment.py  export.py  feature_engineering.py  loader.py  logger.py  manager.py  manifest.py  metrics.py  pipeline.py  sequence.py  statistics.py  types.py  validation.py
detection/models/: __init__.py  isolation_forest.py  lstm_autoencoder.py  rolling_zscore.py
detection/tests/: test_comparison.py  test_evaluation.py  test_experiment.py  test_export.py  test_feature_engineering.py  test_isolation_forest.py  test_lstm_autoencoder.py  test_metrics.py  test_rolling_zscore.py  test_sequence.py  (+1 more)
eda/: README.md  logger.py
preprocessing/: README.md  cleaning.py  config.py  export.py  integrity.py  loader.py  logger.py  manager.py  manifest.py  pipeline.py  quality.py  run_preprocessing.py  temporal.py  validation.py
tests/: test_campaign.py  test_cleaning.py  test_constant_bias.py  test_random_stealth.py  test_spike_suppression.py  test_validation.py
(+3 files in other folders)
